-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1
-
None
-
Qt 5.4.1, Visual Studio 2013 Ultimate (Update 4), Windows RT 8.1
On Windows Store apps the virtual keyboard does not popup when a Qml TextEdit control is pressed. Similar problems have been reported here for instance: http://stackoverflow.com/questions/24426425/windows-8-tablet-does-not-display-tabtip-on-screen-keyboard-on-top-of-qt-openg
In rare (random?) situations it is possible to get the keyboard (e.g. after tapping on the edit control several times).
- relates to
-
QTBUG-30799 Fix input context for Windows Runtime port
-
- Closed
-
For Gerrit Dashboard: QTBUG-44494 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
127474,6 | WinRT: Fix InputPanel on Windows 10 | 5.6 | qt/qtbase | Status: MERGED | -2 | 0 |